# DuduX

./: .gitignore  Makefile  README.md  inference  inference.cu  model.cu  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: ci.yml
cpp/: CMakeLists.txt  README.md
cpp/include/dudux/core/: bitops.hpp  bitvector.hpp  encoder.hpp  metrics.hpp
cpp/include/dudux/memory/: associative_memory.hpp  router.hpp
cpp/include/dudux/nn/: act1b.hpp  attention1b.hpp  linear1b.hpp  mha1b.hpp  mlp1b.hpp
cpp/src/: benchmark.cpp  main.cpp  train_mlp_ste.cpp  train_ste.cpp
cpp/src/gpu/: attention1b.cu
cpp/tests/: test_attention.cpp  test_bitops.cpp  test_mha.cpp  test_mha_multistream.cpp  test_mlp.cpp  test_nn.cpp  test_router.cpp
cpp/tools/: check_packed_mlp.cpp  infer_mlp1b.cpp
data/: README.md  validate_data.sh
docs/: bso-notes.md  config_150M_example.md  config_1B_example.md  gpu_4gb_guide.md  llm_4gb_plan.md  memory_budget_guide.md
scripts/: inference.py  train.py
src/: bso_optimizer.py  dataset.py  model.py  tokenizer.py
tools/: estimate_memory.py
